--- a/poem.rmd
+++ b/poem.rmd
@@ -24,6 +24,12 @@ All mimsy were the borogoves,
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+Stay, I said  
+to the cut flowers.  
+They bowed  
+their heads lower.  
+  
+Stay, I said to the spider,  
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
